@@ -32,7 +32,6 @@ import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
@@ -99,7 +98,6 @@ import org.lamsfoundation.lams.usermanagement.service.IUserManagementService;
 import org.lamsfoundation.lams.util.JsonUtil;
 import org.lamsfoundation.lams.util.MessageService;
 import org.lamsfoundation.lams.util.NumberUtil;
-import org.lamsfoundation.lams.util.excel.ExcelCell;
 import org.lamsfoundation.lams.util.excel.ExcelRow;
 import org.lamsfoundation.lams.util.excel.ExcelSheet;
 
@@ -303,6 +301,14 @@ public class ScratchieServiceImpl
     public Set<ToolActivity> getPrecedingConfidenceLevelsActivities(Long toolContentId) {
 	return toolService.getPrecedingConfidenceLevelsActivities(toolContentId);
     }
+    
+    @Override
+    public boolean isUserGroupLeader(Long userId, Long toolSessionId) {
+	ScratchieSession session = getScratchieSessionBySessionId(toolSessionId);
+	ScratchieUser groupLeader = session.getGroupLeader();
+
+	return (groupLeader != null) && userId.equals(groupLeader.getUserId());
+    }
 
     @Override
     public ScratchieUser checkLeaderSelectToolForSessionLeader(ScratchieUser user, Long toolSessionId) {
@@ -382,7 +388,7 @@ public class ScratchieServiceImpl
 	List<ScratchieUser> users = this.getUsersBySession(sessionId);
 	for (ScratchieUser user : users) {
 
-	    toolService.updateActivityMark(new Double(newMark), null, user.getUserId().intValue(),
+	    toolService.updateActivityMark(newMark.doubleValue(), null, user.getUserId().intValue(),
 		    user.getSession().getSessionId(), false);
 
 	    // record mark change with audit service
@@ -469,7 +475,7 @@ public class ScratchieServiceImpl
 	if (isPropagateToGradebook) {
 	    List<ScratchieUser> users = this.getUsersBySession(sessionId);
 	    for (ScratchieUser user : users) {
-		toolService.updateActivityMark(new Double(mark), null, user.getUserId().intValue(),
+		toolService.updateActivityMark(Double.valueOf(mark), null, user.getUserId().intValue(),
 			user.getSession().getSessionId(), false);
 	    }
 	}
@@ -605,6 +611,19 @@ public class ScratchieServiceImpl
 	    ScratchieUser user = scratchieUserDao.getUserByUserIDAndSessionID(userId, toolSessionId);
 	    user.setSessionFinished(true);
 	    scratchieUserDao.saveObject(user);
+	    
+	    //if this is a leader finishes, complete all non-leaders as well
+	    boolean isUserGroupLeader = user.getSession().isUserGroupLeader(user.getUid());
+	    if (isUserGroupLeader) {
+		getUsersBySession(toolSessionId).forEach(sessionUser -> {
+		    //finish non-leader
+		    sessionUser.setSessionFinished(true);
+		    scratchieUserDao.saveObject(user);
+
+		    // as long as there is no individual results in Scratchie tool (but rather one for entire group) there is no
+		    // need to copyAnswersFromLeader()
+		});
+	    }
 
 	    nextUrl = this.leaveToolSession(toolSessionId, userId);
 	} catch (DataMissingException e) {
@@ -877,7 +896,7 @@ public class ScratchieServiceImpl
 	// show total groupSummary if there is more than 1 group available
 	if (sessionList.size() > 1) {
 	    GroupSummary groupSummaryTotal = new GroupSummary();
-	    groupSummaryTotal.setSessionId(new Long(0));
+	    groupSummaryTotal.setSessionId(0l);
 	    groupSummaryTotal.setSessionName("Summary");
 	    groupSummaryTotal.setMark(0);
 
@@ -1112,7 +1131,7 @@ public class ScratchieServiceImpl
 		}
 		row.addCell(isFirstChoice, color);
 	    }
-	    row.addCell(new Integer(numberOfFirstChoiceEvents));
+	    row.addCell(Integer.valueOf(numberOfFirstChoiceEvents));
 	    double percentage = (numberOfItems == 0) ? 0 : (double) numberOfFirstChoiceEvents / numberOfItems;
 	    row.addPercentageCell(percentage);
 	}
@@ -1175,7 +1194,7 @@ public class ScratchieServiceImpl
 		}
 		row.addCell(itemDto.getAnswersSequence(), color);
 	    }
-	    row.addCell(new Integer(numberOfFirstChoiceEvents));
+	    row.addCell(Integer.valueOf(numberOfFirstChoiceEvents));
 	    double percentage = (numberOfItems == 0) ? 0 : (double) numberOfFirstChoiceEvents / numberOfItems;
 	    row.addPercentageCell(percentage);
 
@@ -1267,8 +1286,8 @@ public class ScratchieServiceImpl
 		    color = IndexedColors.RED;
 		}
 		row.addCell(isFirstChoice, color);
-		row.addCell(new Long(attempts), color);
-		Long mark = (itemDto.getUserMark() == -1) ? null : new Long(itemDto.getUserMark());
+		row.addCell(Integer.valueOf(attempts), color);
+		Long mark = (itemDto.getUserMark() == -1) ? null : Long.valueOf(itemDto.getUserMark());
 		row.addCell(mark);
 	    }
 	}
@@ -1292,8 +1311,8 @@ public class ScratchieServiceImpl
 	    for (ScratchieUser user : summary.getUsers()) {
 		row = researchAndAnalysisSheet.initRow();
 		row.addCell(user.getFirstName() + " " + user.getLastName());
-		row.addCell(new Long(summary.getTotalAttempts()));
-		Long mark = (summary.getTotalAttempts() == 0) ? null : new Long(summary.getMark());
+		row.addCell(Long.valueOf(summary.getTotalAttempts()));
+		Long mark = (summary.getTotalAttempts() == 0) ? null : Long.valueOf(summary.getMark());
 		row.addCell(mark);
 		row.addCell(summary.getSessionName());
 	    }
@@ -1344,7 +1363,7 @@ public class ScratchieServiceImpl
 		    row.addCell(answerTitle, color);
 
 		    for (int numberAttempts : answer.getAttempts()) {
-			row.addCell(new Long(numberAttempts));
+			row.addCell(Integer.valueOf(numberAttempts));
 		    }
 		}
 		researchAndAnalysisSheet.addEmptyRow();
@@ -1367,7 +1386,7 @@ public class ScratchieServiceImpl
 		row = researchAndAnalysisSheet.initRow();
 		row.addEmptyCell();
 		for (int i = 0; i < answers.size(); i++) {
-		    row.addCell(new Long(i + 1));
+		    row.addCell(Integer.valueOf(i + 1));
 		}
 
 		for (ScratchieAnswer answer : answers) {
@@ -1379,7 +1398,7 @@ public class ScratchieServiceImpl
 		    row.addCell(answerTitle);
 
 		    for (int numberAttempts : answer.getAttempts()) {
-			row.addCell(new Long(numberAttempts));
+			row.addCell(Integer.valueOf(numberAttempts));
 		    }
 		}
 
@@ -1408,7 +1427,7 @@ public class ScratchieServiceImpl
 		Long attempts = (long) scratchieAnswerVisitDao.getLogCountTotal(sessionId);
 		row.addCell(attempts);
 		row.addCell(getMessage("label.mark") + ":");
-		row.addCell(new Long(session.getMark()));
+		row.addCell(Long.valueOf(session.getMark()));
 
 		row = researchAndAnalysisSheet.initRow();
 		row.addCell(getMessage("label.team.leader") + session.getSessionName());
@@ -1423,7 +1442,7 @@ public class ScratchieServiceImpl
 			    item.getUid());
 		    for (ScratchieAnswerVisitLog log : logs) {
 			row = researchAndAnalysisSheet.initRow();
-			row.addCell(new Long(i++));
+			row.addCell(Integer.valueOf(i++));
 			String answerDescr = removeHtmlMarkup(log.getScratchieAnswer().getDescription());
 			row.addCell(answerDescr);
 			row.addCell(fullDateFormat.format(log.getAccessDate()));
@@ -1484,7 +1503,7 @@ public class ScratchieServiceImpl
 		    // group name
 		    row.addCell(summary.getSessionName());
 		    // question number
-		    row.addCell(new Long(questionCount++));
+		    row.addCell(Integer.valueOf(questionCount++));
 		    // question title
 		    row.addCell(itemDto.getTitle());
 
@@ -1510,9 +1529,9 @@ public class ScratchieServiceImpl
 		    }
 		    row.addCell(isFirstChoice);
 		    // attempts
-		    row.addCell(new Long(attempts));
+		    row.addCell(Integer.valueOf(attempts));
 		    // mark
-		    Object mark = (itemDto.getUserMark() == -1) ? "" : new Long(itemDto.getUserMark());
+		    Object mark = (itemDto.getUserMark() == -1) ? "" : Long.valueOf(itemDto.getUserMark());
 		    row.addCell(mark);
 
 		    // Answers selected
@@ -2086,17 +2105,31 @@ public class ScratchieServiceImpl
 	    return;
 	}
 
-	// as long as leader aware feature is always ON - copy answers from leader to non-leader user
-
 	ScratchieUser scratchieUser = scratchieUserDao.getUserByUserIDAndSessionID(userId, toolSessionId);
 	// create user if he hasn't accessed this activity yet
 	if (scratchieUser == null) {
 	    scratchieUser = new ScratchieUser(user.getUserDTO(), session);
 	    createUser(scratchieUser);
 	}
+	
+	checkLeaderSelectToolForSessionLeader(scratchieUser, toolSessionId);
+	//if this is a leader finishes, complete all non-leaders as well
+	boolean isUserGroupLeader = session.isUserGroupLeader(scratchieUser.getUid());
+	if (isUserGroupLeader) {
+	    getUsersBySession(toolSessionId).forEach(sessionUser -> {
+		//finish users
+		sessionUser.setSessionFinished(true);
+		scratchieUserDao.saveObject(user);
 
-	// as long as there is no individual results in Scratchie tool (but rather one for entire group) there is no
-	// need to copyAnswersFromLeader()
+		// as long as there is no individual results in Scratchie tool (but rather one for entire group) there is no
+		// need to copyAnswersFromLeader()
+	    });
+
+	} else {
+	    //finish user
+	    scratchieUser.setSessionFinished(true);
+	    scratchieUserDao.saveObject(scratchieUser);
+	}
     }
 
     /* =================================================================================== */
@@ -2182,7 +2215,6 @@ public class ScratchieServiceImpl
      * "questionText", "displayOrder" (Integer) and a ArrayNode "answers". The answers entry should be ArrayNode
      * containing JSON objects, which in turn must contain "answerText", "displayOrder" (Integer), "correct" (Boolean).
      */
-    @SuppressWarnings("unchecked")
     @Override
     public void createRestToolContent(Integer userID, Long toolContentID, ObjectNode toolContentJSON) {
 
